--- a/java-new-version-test/build.gradle
+++ b/java-new-version-test/build.gradle
@@ -12,6 +12,8 @@ repositories {
 }
 
 dependencies {
+    testCompile 'junit:junit:4.12'
+    testCompile 'com.vmlens:concurrent-junit:1.0.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
 }
